fix install scripts

--- a/3.2.0-changes.md
+++ b/3.2.0-changes.md
@@ -13,7 +13,7 @@ This version includes a full internal rewrite of all source code. Official suppo
   * Renamed the `CommandError.UnknownCmd` enum to `ResultType.Unknown`.
 * Changed the type of the `Library` enums from `string` to `Symbol`.
 * Removed the `description` properties from every structure except for `Command`s and `Group`s, and they now default to undefined instead of an empty string.
-* Renamed all structure shorthand properties and parameters (eg. `args` or `cmd`) to their full version.
+* Renamed most structure shorthand properties and parameters (eg. `args` or `cmd`) to their full version.
 * `Argument.name` and `Argument.key` will now default to the value of `Argument.type`.
 * `ArgumentPrecondition.run()` and `Precondition.run()` are no longer required to return the result in a Promise.
 * The `value` parameter of `ArgumentPrecondition.run()` is now first.
