Potential support of both cjs and esm

--- a/3.2.0-changes.md
+++ b/3.2.0-changes.md
@@ -1,8 +1,11 @@
-This version includes a full internal rewrite of all source code. Official support for the Current version of Node.js was dropped, only the LTS version is now officially supported.
+This version includes a full internal rewrite of all source code.
 * Added additional information to the documentation.
 * Updated the README.
-* **Patron.js will now automatically detect which Discord API library is being used (via a pre-install script). If multiple libraries are detected or none are, attempting to install patron.js will fail. TypeScript users who wish to switch Discord API libraries after installation will need to reinstall patron.js afterward, however JavaScript users don't need to do this.**
-* **Patron.js has switched from CommonJS over to ECMAScript modules.** This feature is now in both the LTS (behind a flag) and Current versions of Node.js, and can be enabled by setting the `type` property in your `package.json` file to `"module"`.
+* Rewrote the typings to hopefully work.
+* **Patron will now automatically detect which Discord API library is being used** (via a pre-install script). Multiple libraries aren't supported, and the Discord API library must be installed first. TypeScript users who wish to switch Discord API libraries will need to reinstall patron, however JavaScript users don't need to do this.
+* **Patron has support for ECMAScript modules.** This feature is now in both the LTS (behind a flag) and Current versions of Node.js, and can be enabled by setting the `type` property in your `package.json` file to `"module"`, or using the `.mjs` file extention.
+  * Instead of `RequireAll()`, ECMAScript modules will have an `ImportAll()` method exported.
+  * `RequireAll.Sync()` was changed to it's own functon, `RequireAllSync()`.
 * Renamed the `CommandError` enums to `ResultType`.
   * Added `ResultType.Success`, which replaces the `Result.success` property.
   * Renamed the `CommandError.BotPermission` enum to `ResultType.ClientPermission`.
@@ -21,7 +24,7 @@ This version includes a full internal rewrite of all source code. Official suppo
 * Revamped how `Command`s work with `Group`s.
   * `Command`s are no longer required to be in a group.
   * `Group`s can now have a cooldown that will be used whenever any command in the group is ran, fully separately from any cooldowns the command itself has, and limits all commands in the group at once.
-  * Removed the redundant `Group.commands` property, an equivalent `Registry` method was added.
+  * Removed the redundant `Group.commands` property, a `Registry.getGroupedCommands(groupName)` method was added as a replacement.
 * Removed `Command.hasCooldown`, this can be determined by checking if `Command.cooldowns` is defined.
 * `Cooldown.getExample()` and `Cooldown.getUsage()` now have an optional prefix parameter.
 * `Cooldown.getExample()` will now return `undefined` if any of the command's arguments don't have an example.
@@ -35,7 +38,6 @@ This version includes a full internal rewrite of all source code. Official suppo
 * Renamed `InvalidContextResult` to `ContextResult`.
 * The `CommandResult` class now handles unknown command and invalid argument count results, which replaces the `ArgumentResult` class. A new `ExecutionResult` class will be used for the original functionality of the `CommandResult` class, specifically reverting cooldowns and passing a value to all postconditions.
 * Added `ExecutionResult.fromSuccess()`, which passes a value to all postconditions but doesn't revert cooldowns.
-* Changed the `Mutex` and `MultiMutex` classes to be more directly used. Instead of a sync() method, there are now lock() and unlock() methods instead.
 * Made many changes to the default TypeReaders.
   * Multiple bugs in various readers were patched.
   * The `BooleanReader` accepts more strings, including "on" and "off".
@@ -45,8 +47,8 @@ This version includes a full internal rewrite of all source code. Official suppo
   * Removed all channel readers except for the `GuildChannel` one, which was renamed to `ChannelReader`.
   * Removed the `GuildEmojiReader`, identical functionality can easily be done with an `ArgumentPrecondition` and the `EmojiReader`.
 * Fixed the Registry's validation of infinite or remainder `Argument`s.
-* The Registry now uses `Map`s instead of `Array`s for storage due to vastly superior performance.
+* The Registry now uses `Map`s instead of `Array`s for storage due to improved performance.
 * The Registry will now throw when you attempt to unregister anything in use by other registered items.
-* Added the `Registry.getGroupedCommands(name)` method, which allows you to get a list of all `Command`s in a `Group`.
-* Undocumented all `Handler` methods except for `Handler.run()` to avoid potential confusion and allow for better use of internals. Any other methods now has no guarantees.
-* No longer exported the `MultiMutex` class, the use cases for it are too rare and just exporting the `Mutex` class can cover all use cases.
+* Undocumented all `Handler` methods except for `Handler.run()` to avoid potential confusion and allow for better use of internals. Any other methods now have no guarantees.
+* Changed the `Mutex` and `MultiMutex` classes to be more directly used. Instead of a sync() method, there are now lock() and unlock() methods instead.
+* No longer exported the `MultiMutex` class, the use cases for it are too rare and just exporting the `Mutex` class can cover those with a little work.
