Support for ESM behind a /esm path

--- a/3.2.0-changes.md
+++ b/3.2.0-changes.md
@@ -1,9 +1,9 @@
 This version includes a full internal rewrite of all source code.
 * Added additional information to the documentation.
 * Updated the README.
-* Rewrote the typings to hopefully work.
-* **Patron will now automatically detect which Discord API library is being used** (via a pre-install script). Multiple libraries aren't supported, and the Discord API library must be installed first. TypeScript users who wish to switch Discord API libraries will need to reinstall patron, however JavaScript users don't need to do this.
-* **Patron has support for ECMAScript modules.** This feature is now in both the LTS (behind a flag) and Current versions of Node.js, and can be enabled by setting the `type` property in your `package.json` file to `"module"`, or using the `.mjs` file extention.
+* Made significant changes and fixes to the typings to aim for full TypeScript support.
+* **Patron will now automatically detect which Discord API library is being used** via a pre-install script. Multiple libraries aren't supported, and a Discord API library must be installed first. TypeScript users who wish to switch Discord API libraries will need to reinstall patron, however JavaScript users don't need to.
+* **Patron has support for ECMAScript modules.** You can access this by `import`ing `"patron/esm"` instead of `"patron"` in ECMAScript modules. Patron will maintain full support of CommonJS modules.
   * Instead of `RequireAll()`, ECMAScript modules will have an `ImportAll()` method exported.
   * `RequireAll.Sync()` was changed to it's own functon, `RequireAllSync()`.
 * Renamed the `CommandError` enums to `ResultType`.
