Added Handler#executeCommand + more flexible Command#arguments

--- a/3.2.0-changes.md
+++ b/3.2.0-changes.md
@@ -20,6 +20,7 @@ This version includes a full internal rewrite of all source code.
 * `Argument.name` and `Argument.key` will now default to the value of `Argument.type`.
 * `ArgumentPrecondition.run()` and `Precondition.run()` are no longer required to return the result in a Promise.
 * The `value` parameter of `ArgumentPrecondition.run()` is now first.
+* `Command.arguments` now accepts an `ArgumentOptions` object as well as `Argument`s.
 * Renamed `Command.botPermissions` to `Command.clientPermissions`.
 * Revamped how `Command`s work with `Group`s.
   * `Command`s are no longer required to be in a group.
@@ -49,6 +50,7 @@ This version includes a full internal rewrite of all source code.
 * Fixed the Registry's validation of infinite or remainder `Argument`s.
 * The Registry now uses `Map`s instead of `Array`s for storage due to improved performance.
 * The Registry will now throw when you attempt to unregister anything in use by other registered items.
-* Undocumented all `Handler` methods except for `Handler.run()` to avoid potential confusion and allow for better use of internals. Any other methods now have no guarantees.
+* Undocumented all internally used `Handler` methods and allow for better use of internals. Any undocumented methods now have no guarantees.
+* Added `Handler.executeCommand(message, command, args)` for easy force execution of `Command`s.
 * Changed the `Mutex` and `MultiMutex` classes to be more directly used. Instead of a sync() method, there are now lock() and unlock() methods instead.
 * No longer exported the `MultiMutex` class, the use cases for it are too rare and just exporting the `Mutex` class can cover those with a little work.
