--- a/3.2.0-changes.md
+++ b/3.2.0-changes.md
@@ -50,7 +50,7 @@ This version includes a full internal rewrite of all source code.
 * Fixed the Registry's validation of infinite or remainder `Argument`s.
 * The Registry now uses `Map`s instead of `Array`s for storage due to improved performance.
 * The Registry will now throw when you attempt to unregister anything in use by other registered items.
-* Undocumented all internally used `Handler` methods and allow for better use of internals. Any undocumented methods now have no guarantees.
+* Undocumented all internally used `Handler` methods to allow for better use of internals. Any undocumented methods now have no guarantees.
 * Added `Handler.executeCommand(message, command, args)` for easy force execution of `Command`s.
 * Changed the `Mutex` and `MultiMutex` classes to be more directly used. Instead of a sync() method, there are now lock() and unlock() methods instead.
 * No longer exported the `MultiMutex` class, the use cases for it are too rare and just exporting the `Mutex` class can cover those with a little work.
