Moved documentation to typings + fallthrough for optional Arguments

--- a/3.2.0-changes.md
+++ b/3.2.0-changes.md
@@ -18,6 +18,7 @@ This version includes a full internal rewrite of all source code.
 * Removed the `description` properties from every structure except for `Command`s and `Group`s, and they now default to undefined instead of an empty string.
 * Renamed most structure shorthand properties and parameters (eg. `args` or `cmd`) to their full version.
 * `Argument.name` and `Argument.key` will now default to the value of `Argument.type`.
+* Chained optional `Argument`s will attempt to re-use the same input if the previous optional `Argument` was unable to parse a type.
 * `ArgumentPrecondition.run()` and `Precondition.run()` are no longer required to return the result in a Promise.
 * The `value` parameter of `ArgumentPrecondition.run()` is now first.
 * `Command.arguments` now accepts an `ArgumentOptions` object as well as `Argument`s.
@@ -51,6 +52,6 @@ This version includes a full internal rewrite of all source code.
 * The Registry now uses `Map`s instead of `Array`s for storage due to improved performance.
 * The Registry will now throw when you attempt to unregister anything in use by other registered items.
 * Undocumented all internally used `Handler` methods to allow for better use of internals. Any undocumented methods now have no guarantees.
-* Added `Handler.executeCommand(message, command, args)` for easy force execution of `Command`s.
+* Added `Handler.executeCommand(message, command, args)` for manual execution of `Command`s.
 * Changed the `Mutex` and `MultiMutex` classes to be more directly used. Instead of a sync() method, there are now lock() and unlock() methods instead.
 * No longer exported the `MultiMutex` class, the use cases for it are too rare and just exporting the `Mutex` class can cover those with a little work.
