--- a/3.2.0-changes.md
+++ b/3.2.0-changes.md
@@ -52,6 +52,7 @@ This version includes a full internal rewrite of all source code.
 * The Registry now uses `Map`s instead of `Array`s for storage due to improved performance.
 * The Registry will now throw when you attempt to unregister anything in use by other registered items.
 * Undocumented all internally used `Handler` methods to allow for better use of internals. Any undocumented methods now have no guarantees.
+* Added prefix support through `Handler.registerPrefixes(prefixes, guildId?)` and a similar unregister method, removing the need to pass a prefix length to `Handler.run()`.
 * Added `Handler.executeCommand(message, command, args)` for manual execution of `Command`s.
 * Changed the `Mutex` and `MultiMutex` classes to be more directly used. Instead of a sync() method, there are now lock() and unlock() methods instead.
 * No longer exported the `MultiMutex` class, the use cases for it are too rare and just exporting the `Mutex` class can cover those with a little work.
