--- a/4.0.0-changes.md
+++ b/4.0.0-changes.md
@@ -2,11 +2,11 @@
 
 * **Patron's name on NPM has changed!** We were able to get the `patron` module on NPM, which we will release all future versions of patron to.
 * **Patron is now licensed under GPL-3 or later.** This is a far more lax license that should allow more freedom to patron users.
-* **Patron now automatically detects the Discord API library being used** via a pre-install script. Using multiple libraries at once isn't supported, and the Discord API library must be installed first. TypeScript/VSCode users who wish to switch to a different Discord API library will want to reinstall patron afterwards to update the typings.
+* **Patron now automatically detects the Discord API library being used** via a pre-install script. Using multiple libraries at once isn't supported, and the library must be installed first. TypeScript/VSCode users who wish to switch to a different library will want to reinstall patron afterwards to update the typings.
 * **Patron supports ECMAScript modules.** You can access this by `import`ing `"patron/esm"` (or just `"patron"` in Node.js 13.7.0+) in ECMAScript modules. Patron still maintains full support of CommonJS modules.
 * **Patron has full TypeScript support.** Although patron had typings already, they were untested and poorly written. The typings are now highly tested and have been checked over by several TypeScript developers (Thank you [George](https://github.com/Geo1088), [Apacheli](https://github.com/Apacheli) and [Skillz4Killz](https://github.com/Skillz4Killz)).
 
-## List of all relevant changes:
+## List of all changes:
 
 * Renamed `CommandError` to `ResultType`:
   * Renamed `BotPermission` to `ClientPermission`.
@@ -47,6 +47,7 @@
   * Significantly improved the functionality of `optional` arguments.
 * `ArgumentPrecondition` and `Precondition` no longer require `run()` to return a `Promise`.
 * The `value`/`input` parameters of `ArgumentPrecondition.run()`/`TypeReader.read()` are now first.
+* Added `Command.setDefaults()` and `Group.setDefaults()` methods which set default options for the structures.
 * Changed `Command`:
   * `arguments` accepts `ArgumentOptions` as well as `Argument`s.
   * Renamed `botPermissions` to `clientPermissions`.
