adjusted prefix handling

--- a/4.0.0-changes.md
+++ b/4.0.0-changes.md
@@ -63,7 +63,7 @@
 * Changed `Registry`:
   * Stores all structures in `Map`s instead of `Array`s.
   * Added `get()` methods for all structures (eg `getCommand()`).
-  * Added `registerPrefixes()` and `unregisterPrefixes()` for full prefix support.
+  * Added `registerPrefixes()` and `unregisterPrefixes()` for full prefix support. Global prefixes will apply to DMs and all guilds with no guild-specific prefixes.
 * Changed `Handler`:
   * Undocumented all methods except for `run()`, other methods have no guarantees.
   * Removed the `prefixLength` parameter from `run()` (see `Registry.registerPrefixes()`).
