--- a/4.0.0-changes.md
+++ b/4.0.0-changes.md
@@ -65,7 +65,7 @@
   * Added `get()` methods for all structures (eg `getCommand()`).
   * Added `registerPrefixes()` and `unregisterPrefixes()` for full prefix support. Global prefixes will apply to DMs and all guilds with no guild-specific prefixes.
 * Changed `Handler`:
-  * Undocumented all methods except for `run()`, other methods have no guarantees.
+  * Undocumented all methods except for `run()` and `runPreconditions()`, other methods have no guarantees.
   * Removed the `prefixLength` parameter from `run()` (see `Registry.registerPrefixes()`).
   * Added `executeCommand()` for manual execution of `Command`s.
 * Changed `Mutex` to use `lock()` and `unlock()` instead of `sync()`.
