Add Command to Postcondition#run

--- a/4.0.0-changes.md
+++ b/4.0.0-changes.md
@@ -59,7 +59,7 @@
   * Added `cooldowns`, which will be run on every `Command` in the group.
   * Removed `commands`, use `Registry.getGroupedCommands()` instead.
 * Added `Cooldown.aggressive`, when enabled the cooldown will be set back to the full duration every time it's used past the limit.
-* Changed `Postcondition.run()`'s second parameter from a result to a value provided by an `ExecutionResult`.
+* Changed `Postcondition.run()`'s second parameter from a result to a value provided by an `ExecutionResult`, and added a `Command` parameter at the start.
 * Changed `Registry`:
   * Stores all structures in `Map`s instead of `Array`s.
   * Added `get()` methods for all structures (eg `getCommand()`).
