First pass at Cooldown revamp

--- a/4.0.0-changes.md
+++ b/4.0.0-changes.md
@@ -8,6 +8,7 @@
 
 ## List of all changes:
 
+* Changed all enums to use Numbers instead of Symbols. This was done to improve TypeScript support.
 * Renamed `CommandError` to `ResultType`:
   * Renamed `BotPermission` to `ClientPermission`.
   * Renamed `Command` to `Execution`.
@@ -37,7 +38,7 @@
 * `CommandResult` now handles unknown commands, invalid argument counts, and out-of-order arguments.
 * `ExecutionResult` now handles the original functionality of the `CommandResult` class.
   * Added `ExecutionResult.fromSuccess()`, which provides a value to `Postcondition`s without reverting `Cooldown`s like `fromFailure()` does.
-* Added `CooldownResult.group`, which is the `Group` the cooldown was on if relevant.
+* Added `CooldownResult.group`, which will be `true` if the Cooldowns were on a Group and not a Command.
 * Renamed `ExceptionResult` to `ErrorResult`.
 * Renamed `InvalidContextResult` to `ContextResult`.
 * Removed `description` from every structure except for `Command` and `Group`, it now defaults to `undefined`.
@@ -53,12 +54,18 @@
   * Renamed `botPermissions` to `clientPermissions`.
   * Changed `group` to be optional.
   * Removed `hasCooldown`, check if `cooldowns` is defined instead.
+  * Changed `cooldowns` to be an array instead of a single cooldown.
   * `getExample()` and `getUsage()` have an optional prefix parameter.
   * `getExample()` returns undefined if any `Argument` examples are missing.
+  * Renamed all cooldown methods (e.g. `useCooldown`) to have plural names.
 * Changed `Group`:
-  * Added `cooldowns`, which will be run on every `Command` in the group.
+  * Added `cooldowns`, which will be an array of Cooldowns to run on every `Command` in the group.
+  * Added cooldown methods which are identical to the ones `Command`s have.
   * Removed `commands`, use `Registry.getGroupedCommands()` instead.
-* Added `Cooldown.aggressive`, when enabled the cooldown will be set back to the full duration every time it's used past the limit.
+* Changed `Cooldown`:
+  * Added `aggressive`, when enabled the cooldown will be set back to the full duration every time it's used past the limit.
+  * Changed `sorter`, now async functions can be provided and a Message object is supplied instead of user and guild IDs.
+  * Added `failure`, which indicates that a Cooldown should be applied to failed Command executions only.
 * Changed `Postcondition.run()`'s second parameter from a result to a value provided by an `ExecutionResult`, and added a `Command` parameter at the start.
 * Changed `Registry`:
   * Stores all structures in `Map`s instead of `Array`s.
