Change license & remove library detection

--- a/4.0.0-changes.md
+++ b/4.0.0-changes.md
@@ -1,9 +1,8 @@
 # This version includes many breaking changes and a full internal rewrite.
 
-* **Patron's name on NPM has changed!** We were able to get the `patron` module on NPM, which we will release all future versions of patron to.
-* **Patron is now licensed under GPL-3 or later.** This is a far more lax license that should allow more freedom to patron users.
-* **Patron now automatically detects the Discord API library being used** via a pre-install script. Using multiple libraries at once isn't supported, and the library must be installed first. TypeScript/VSCode users who wish to switch to a different library will want to reinstall patron afterwards to update the typings.
-* **Patron supports ECMAScript modules.** You can access this by `import`ing `"patron/esm"` (or just `"patron"` in Node.js 13.7.0 and later) in ECMAScript modules. Patron still maintains full support of CommonJS modules.
+* **Patron's name on NPM has changed!** We were able to get the `patron` module on NPM, all future versions of patron will be released on it.
+* **Patron is now licensed under LGPL-3.0 or later.** This is a far more lax license that should allow more freedom to patron users.
+* **Patron supports ECMAScript modules.** You can simply use `import` in any ECMAScript modules (includes named exports). Patron still maintains full support of CommonJS modules.
 * **Patron has full TypeScript support.** Although patron had typings already, they were untested and poorly written. The typings are now highly tested and have been checked over by several TypeScript developers (Thank you [George](https://github.com/Geo1088), [Apacheli](https://github.com/Apacheli) and [Skillz4Killz](https://github.com/Skillz4Killz)).
 
 ## List of all changes:
@@ -75,5 +74,7 @@
   * Undocumented all methods except for `run()` and `runPreconditions()`, other methods have no guarantees.
   * Removed the `prefixLength` parameter from `run()` (see `Registry.registerPrefixes()`).
   * Added `executeCommand()` for manual execution of `Command`s.
+  * Added `parsePrefix()` for determining which prefix a message has.
 * Changed `Mutex` to use `lock()` and `unlock()` instead of `sync()`.
 * Removed `MultiMutex` from exports, use cases were too rare and identical functionality can be achieved with `Mutex`.
+* Added `ImportAll`, which will replace `RequireAll` when the library is used in an ECMAScript module.
