Change to better library detection

--- a/4.0.0-changes.md
+++ b/4.0.0-changes.md
@@ -67,8 +67,9 @@
   * Added `failure`, which indicates that a Cooldown should be applied to failed Command executions only.
 * Changed `Postcondition.run()`'s second parameter from a result to a value provided by an `ExecutionResult`, and added a `Command` parameter at the start.
 * Changed `Registry`:
+  * Added static `setLibrary()` method for simpler usage.
   * Stores all structures in `Map`s instead of `Array`s.
-  * Added `get()` methods for all structures (eg `getCommand()`).
+  * Added `get()` methods for all structures (e.g. `getCommand()`).
   * Added `registerPrefixes()` and `unregisterPrefixes()` for full prefix support. Global prefixes will apply to DMs and all guilds with no guild-specific prefixes.
 * Changed `Handler`:
   * Undocumented all methods except for `run()` and `runPreconditions()`, other methods have no guarantees.
