Add partial automatic library detection

--- a/4.0.0-changes.md
+++ b/4.0.0-changes.md
@@ -1,7 +1,8 @@
 # This version includes many breaking changes and a full internal rewrite.
 
 * **Patron's name on NPM has changed!** We were able to get the `patron` module on NPM, all future versions of patron will be released on it.
-* **Patron is now licensed under LGPL-3.0 or later.** This is a far more lax license that should allow more freedom to patron users.
+* **Patron is now licensed under LGPL-3.0.** This is a far more lax license that should allow more freedom to patron users.
+* **Patron now automatically detects the Discord wrapper library used when possible.** If only one wrapper library is installed, patron will detect and use that. Otherwise, you can swap between libraries at any point using the static `Registry#setLibrary()` method.
 * **Patron supports ECMAScript modules.** You can simply use `import` in any ECMAScript modules (includes named exports). Patron still maintains full support of CommonJS modules.
 * **Patron has full TypeScript support.** Although patron had typings already, they were untested and poorly written. The typings are now highly tested and have been checked over by several TypeScript developers (Thank you [George](https://github.com/Geo1088), [Apacheli](https://github.com/Apacheli) and [Skillz4Killz](https://github.com/Skillz4Killz)).
 
@@ -67,7 +68,7 @@
   * Added `failure`, which indicates that a Cooldown should be applied to failed Command executions only.
 * Changed `Postcondition.run()`'s second parameter from a result to a value provided by an `ExecutionResult`, and added a `Command` parameter at the start.
 * Changed `Registry`:
-  * Added static `setLibrary()` method for simpler usage.
+  * Added static `setLibrary()` method for simpler usage and set up automatic detection.
   * Stores all structures in `Map`s instead of `Array`s.
   * Added `get()` methods for all structures (e.g. `getCommand()`).
   * Added `registerPrefixes()` and `unregisterPrefixes()` for full prefix support. Global prefixes will apply to DMs and all guilds with no guild-specific prefixes.
